--- a/src/pages/caracteristicas.astro
+++ b/src/pages/caracteristicas.astro
@@ -1,11 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import CardBenefit from "../components/CardBenefit.astro";
-import TopFeature from "../components/TopFeature.astro";
 import FeatureCard from "../components/FeatureCard.astro";
 ---
 
-<Layout title="Diseña tu Invitación Digital | Wedding Invites">
+<Layout title="Características de Nuestras Invitaciones Digitales - Weddinvites" metaDescription="Explora las características únicas y sorprendentes de nuestras invitaciones digitales para bodas. Simplifica tu proceso de planificación con Weddinvites.">
   <section
     class="container py-5 px-5 md:flex md:flex-wrap md:justify-between md:mx-auto lg:m-auto xl:m-auto xl:w-11/12 xl:mt-10"
   >
