--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -42,7 +42,7 @@ if (Astro.request.method === "POST") {
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Wedding Digital Invitation Contact us | Wedding Invites">
+<Layout title="Contáctanos para Invitaciones Digitales Personalizadas - Weddinvites" metaDescription="¿Necesitas ayuda con tus invitaciones digitales? ¡Contáctanos hoy mismo y comienza a diseñar tus invitaciones personalizadas con Weddinvites!">
     <section class="container py-5 px-5 md:mx-auto lg:m-auto lg:w-11/12">
         <article class="mb-10 lg:text-center">
             <h1 class="text-secondd-950 uppercase">CONTACTANOS</h1>
