--- a/src/pages/en/contact.astro
+++ b/src/pages/en/contact.astro
@@ -2,7 +2,7 @@
 import Layout from "../../layouts/Layout.astro";
 ---
 
-<Layout title="Diseña tu Invitación Digital | Wedding Invites">
+<Layout title="Contact Us for Custom Digital Invitations - Weddinvites" metaDescription="Need help with your digital invitations? Contact us today and start designing your custom invitations with Weddinvites!">
     <section class="container py-5 px-5 lg:m-auto lg:w-11/12">
         <article class="mb-10 lg:text-center">
             <h1 class="text-secondd-950 uppercase">CONTACT US</h1>
