--- a/src/pages/planes.astro
+++ b/src/pages/planes.astro
@@ -1,10 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Plan from "../components/Plan.astro";
-import ItemPlan from "../components/ItemPlan.astro";
 ---
 
-<Layout title="Diseña tu Invitación Digital | Wedding Invites">
+<Layout title="Descubre Nuestros Planes de Invitaciones Digitales - Weddinvites" metaDescription="Conoce nuestros planes de invitaciones digitales para bodas y elige la opción que mejor se adapte a tus necesidades. ¡Haz que tu boda sea memorable con Weddinvites!">
   <section
     class="container py-5 px-5 md:flex md:flex-wrap md:justify-between md:mx-auto lg:m-auto xl:m-auto xl:w-11/12 xl:mt-10"
   >
