--- a/src/pages/wedding-planer.astro
+++ b/src/pages/wedding-planer.astro
@@ -4,19 +4,17 @@ import Plan from "../components/Plan.astro";
 import FaqItem from "../components/FaqItem.astro";
 ---
 
-<Layout title="Diseña tu Invitación Digital | Wedding Invites">
+<Layout title="Invitaciones Digitales para Wedding Planners - Weddinvites" metaDescription=" Invita a tus clientes a unirse a la revolución de las invitaciones digitales con Weddinvites. ¡Haz que sus eventos sean inolvidables!">
   <section class="container py-5 px-5 md:mx-auto lg:m-auto lg:w-11/12">
     <article class="mb-10">
       <h1 class="text-secondd-950 uppercase">
         ¡Únete a la Revolución de Bodas con Weddinvites!
       </h1>
       <p class="text-xl">
-        En Weddinvites, extendemos una cálida invitación a agencias de
-        organización de eventos y wedding planners a ser pioneros en una nueva
-        era de <strong>invitaciones digitales para bodas</strong>. Nuestra
-        plataforma ofrece una oportunidad única para elevar tus servicios y
-        brindar a tus clientes una experiencia inolvidable desde el primer
-        anuncio hasta el último RSVP.
+        En Weddinvites, extendemos una cálida invitación a agencias de organización de eventos y wedding planners para ser pioneros en una nueva era de <strong>invitaciones digitales para bodas</strong>. Nuestra plataforma ofrece una oportunidad única para elevar tus servicios y brindar a tus clientes una experiencia inolvidable desde el primer anuncio hasta el último RSVP.
+      </p>
+      <p class="text-xl mt-5 text-center font-bold">
+        Además, ¡regístrate hoy como socio de nuestro programa y obtén tarifas preferenciales para tus clientes!
       </p>
     </article>
 
