--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ interface Props {
 	title: string;
 }
 
-const { title } = Astro.props;
+const { title, metaDescription } = Astro.props;
 const currentLang = Astro.currentLocale
 ---
 
@@ -31,6 +31,6 @@ const currentLang = Astro.currentLocale
 	<body>
 		<Header languagesList={Astro.preferredLocaleList} currentLang={currentLang} />
 		<slot />
-		<Footer />
+		<Footer currentLang={currentLang} />
 	</body>
 </html>
