--- a/src/pages/en/wedding-planer.astro
+++ b/src/pages/en/wedding-planer.astro
@@ -4,11 +4,12 @@ import Plan from "../../components/Plan.astro";
 import FaqItem from "../../components/FaqItem.astro";
 ---
 
-<Layout title="Diseña tu Invitación Digital | Wedding Invites">
+<Layout title="Digital Invitations for Wedding Planners - Weddinvites" metaDescription="Invite your clients to join the digital invitation revolution with Weddinvites. Make their events unforgettable!" >
   <section class="container py-5 px-5 lg:m-auto lg:w-11/12">
     <article class="mb-10">
       <h1 class="text-secondd-950 uppercase">JOIN THE WEDDINVITES WEDDING REVOLUTION!</h1>
       <p class="text-xl">At Weddinvites, we extend a warm invitation to event planning agencies and wedding planners to pioneer a new era of <strong>digital wedding invitations</strong>. Our platform provides a unique opportunity to elevate your services and offer your clients an unforgettable experience from the first announcement to the final RSVP.</p>
+      <p class="text-xl mt-5 text-center font-bold">Additionally, sign up today as a partner in our program and enjoy preferential rates for your clients!</p>
     </article>
 
     <form
@@ -60,262 +61,5 @@ import FaqItem from "../../components/FaqItem.astro";
         >CONTACT</button
       >
     </form>
-  </section>
-
-  <section class="container py-5 px-5 lg:m-auto lg:w-11/12">
-    <h2 class="block mb-5 md:text-center">Digital Invitations</h2>
-
-    <div class="md:flex md:flex-wrap md:justify-between lg:m-auto">
-      <Plan name="Plan Amor" pricing="0" label="Plan gratuito">
-        <ul slot="includes">
-          <li class="py-2 border-b-2 border-brand2-100 flex">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6 text-primary-500 mr-1"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-              ></path>
-            </svg>
-            <span>Auto gestionable</span>
-          </li>
-          <li class="py-2 border-b-2 border-brand2-100 flex">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6 text-primary-500 mr-1"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-              ></path>
-            </svg>
-            <span>Cuenta regresiva</span>
-          </li>
-          <li class="py-2 border-b-2 border-brand2-100 flex">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6 text-primary-500 mr-1"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-              ></path>
-            </svg>
-            <span>Invitados</span>
-          </li>
-          <li class="py-2 border-b-2 border-brand2-100 flex">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6 text-primary-500 mr-1"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-              ></path>
-            </svg>
-            <span>Ajustes generales</span>
-          </li>
-          <li class="py-2 border-b-2 border-brand2-100 flex">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6 text-secondd-600 mr-1"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-              ></path>
-            </svg>
-            <span>Mapa de ubicación</span>
-          </li>
-          <li class="py-2 border-b-2 border-brand2-100 flex">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6 text-secondd-600 mr-1"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-              ></path>
-            </svg>
-            <span>Mesa de regalos</span>
-          </li>
-          <li class="py-2 flex">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6 text-secondd-600 mr-1"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-              ></path>
-            </svg>
-            <span>Notificaciones Push</span>
-          </li>
-        </ul>
-      </Plan>
-      <Plan
-        name="Plan Pasión"
-        pricing="2,350"
-        label="Pruébalo gratis por 15 días"
-      >
-        <ul slot="includes">
-          <li class="py-2 border-b-2 border-brand2-100 flex">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6 text-primary-500 mr-1"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-              ></path>
-            </svg>
-            <span>Auto gestionable</span>
-          </li>
-          <li class="py-2 border-b-2 border-brand2-100 flex">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6 text-primary-500 mr-1"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-              ></path>
-            </svg>
-            <span>Cuenta regresiva</span>
-          </li>
-          <li class="py-2 border-b-2 border-brand2-100 flex">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6 text-primary-500 mr-1"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-              ></path>
-            </svg>
-            <span>Invitados</span>
-          </li>
-          <li class="py-2 border-b-2 border-brand2-100 flex">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6 text-primary-500 mr-1"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-              ></path>
-            </svg>
-            <span>Ajustes generales</span>
-          </li>
-          <li class="py-2 border-b-2 border-brand2-100 flex">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6 text-primary-500 mr-1"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-              ></path>
-            </svg>
-            <span>Mapa de ubicación</span>
-          </li>
-          <li class="py-2 border-b-2 border-brand2-100 flex">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6 text-primary-500 mr-1"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-              ></path>
-            </svg>
-            <span>Mesa de regalos</span>
-          </li>
-          <li class="py-2 flex">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6 text-primary-500 mr-1"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-              ></path>
-            </svg>
-            <span>Notificaciones Push</span>
-          </li>
-        </ul>
-      </Plan>
-    </div>
   </section>
 </Layout>
